trying transliteration on a word basis instead of a phrase basis

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,7 @@ data
 /*.txt
 /*.vert
 corpuscrawler-master
+raw/original-words.txt
+raw/transliterated-words.txt
 raw/original.txt
 raw/transliterated.txt
